--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
     <string name="navigation_drawer_close">Close Navigation Drawer</string>
 
+
+    <string name="descriptionGarlicBread">A bun/bread consisting of Garlic Butter</string>
+    <string name="descriptionBCR">Sweet Indian Chicken Curry with rice</string>
+    <string name="descriptionHotDog">Cooked sausage served in a bun, with ketchup</string>
+    <string name="descriptionHashbrown">Boiled, shredded potatoes fried until golden color</string>
+    <string name="descriptionNoodles">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
+    <string name="descriptionWedges">Wedge-shaped irregular potato slices fried in oil</string>
 </resources>
